<resources>
    <string name="app_name">ECBook</string>

    <string name="exit">再按一次退出</string>

    <string name="profile_title">个人中心</string>
    <string name="profile_upload">我上传的</string>
    <string name="profile_credit">我的积分</string>
    <string name="profile_download">下载历史</string>
    <string name="profile_detail">个人信息</string>
    <string name="profile_download_manager">下载管理</string>
    <string name="profile_help">帮助</string>
    <string name="profile_clickto_signin">点击此处登录</string>

    <string name="signin_title">用户登录</string>
    <string name="signin_button">登录</string>
    <string name="signin_username">用户名</string>
    <string name="signin_password">密码</string>
    <string name="signin_register">没有账号？免费注册</string>

    <string name="signup_title">注册用户</string>
    <string name="signup_button">注册</string>
    <string name="signup_email">邮箱</string>
    <string name="signup_confirm">确认密码</string>

    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">释放刷新</string>
    <string name="xlistview_header_hint_loading">正在加载…</string>
    <string name="xlistview_header_last_time">最后更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>

    <string name="dialog_ensure">确定</string>
    <string name="dialog_cancel">取消</string>

    <string name="topview_message">赚EC币</string>

    <string name="declare_title">标题</string>
    <string name="declare_category">类别</string>
    <string name="declare_price">EC币</string>

    <string name="search_input">请输入搜索关键字</string>

    <string name="filter_popularity">人气排行</string>
    <string name="filter_top_price">最贵</string>
    <string name="filter_cheapest">最便宜</string>

    <string name="gooddetail_buy">立即下载</string>
    <string name="gooddetail_collect">加入收藏</string>

    <string name="collection_nothing">你还没有任何收藏</string>
    <string name="collection_add">赶紧去逛逛吧！加一些收藏</string>

    <string name="collection_remove">移除</string>
    <string name="collection_removeAll">全部移除</string>

    <string name="myupload_nothing">你还没有任何上传</string>
    <string name="myupload_add">赶紧去上传一些电子书吧</string>
    <string name="mydownload_nothing">你还没有任何下载</string>
    <string name="mydownload_add">赶紧去下载一些电子书吧</string>
</resources>
