<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/body"
    android:orientation="vertical" >

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="160dp"
        android:background="@drawable/profile_img_bg" >

        <ImageView
            android:id="@+id/profile_head_setting"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="right"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:src="@drawable/profile_refresh_site_icon"
            android:visibility="gone" />

        <FrameLayout
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp" >

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/profile_avatar_bg" />

            <com.kelvin.ecbook.view.webimage.RoundedWebImageView
                android:id="@+id/profile_head_photo"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="-2dp"
                android:src="@drawable/profile_no_avatar_icon" />
        </FrameLayout>

        <ImageView
            android:id="@+id/profile_head_camera"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="15dp"
            android:padding="5dp"
            android:src="@drawable/profile_refresh_camera_icon" />

        <TextView
            android:id="@+id/profile_head_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="45dp"
            android:textColor="#ffffff"
            android:textSize="16dp"
            android:text="@string/profile_clickto_signin"/>

        <LinearLayout
            android:id="@+id/member_level_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="visible">

            <ImageView
                android:id="@+id/member_level_icon"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:baselineAlignBottom="false"
                android:src="@drawable/profile_vip_icon"
                android:visibility="gone" />

            <TextView
                android:id="@+id/member_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:textColor="#cccccc"
                android:textSize="14dp" />
        </LinearLayout>
    </FrameLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/body"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="80dp"
            android:layout_margin="10dp"
            android:background="@drawable/body_cont"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <FrameLayout
                android:id="@+id/profile_upload_history"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" >

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="13dp"
                    android:src="@drawable/profile_upload_history" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="17dp"
                    android:gravity="center"
                    android:text="@string/profile_upload"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/profile_upload_history_num"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="23dp"
                    android:layout_marginLeft="20dp"
                    android:background="@drawable/profile_refresh_goods_num_bg"
                    android:gravity="center"
                    android:text="0"
                    android:textColor="#ffffff"
                    android:visibility="gone" />
            </FrameLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:background="@drawable/item_grid_filter_bg_line" />

            <FrameLayout
                android:id="@+id/profile_credit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" >

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="13dp"
                    android:src="@drawable/profile_credit" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="17dp"
                    android:gravity="center"
                    android:text="@string/profile_credit"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/profile_credit_num"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="23dp"
                    android:layout_marginLeft="20dp"
                    android:background="@drawable/profile_refresh_goods_num_bg"
                    android:gravity="center"
                    android:text="0"
                    android:textColor="#ffffff"
                    android:visibility="gone" />
            </FrameLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:background="@drawable/item_grid_filter_bg_line" />

            <FrameLayout
                android:id="@+id/profile_download_history"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" >

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="13dp"
                    android:src="@drawable/profile_download_history" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="17dp"
                    android:gravity="center"
                    android:text="@string/profile_download"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/profile_download_history_num"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="23dp"
                    android:layout_marginLeft="20dp"
                    android:background="@drawable/profile_refresh_goods_num_bg"
                    android:gravity="center"
                    android:text="0"
                    android:textColor="#ffffff"
                    android:visibility="gone" />
            </FrameLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/profile_detail"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:background="@drawable/body_cont"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_weight="1"
                android:text="@string/profile_detail"
                android:textColor="#000000"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/profile_head_collect_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textColor="#a3a3a3"
                android:textSize="16dp" />

            <ImageView
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:layout_marginRight="10dp"
                android:src="@drawable/accsessory_arrow_right" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/profile_download_manage"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:background="@drawable/body_cont"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_weight="1"
                android:text="@string/profile_download_manager"
                android:textColor="#000000"
                android:textSize="16dp" />

            <ImageView
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:layout_marginRight="10dp"
                android:src="@drawable/accsessory_arrow_right" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/profile_help"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:background="@drawable/body_cont"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_weight="1"
                android:text="@string/profile_help"
                android:textColor="#000000"
                android:textSize="16dp" />

            <ImageView
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:layout_marginRight="10dp"
                android:src="@drawable/accsessory_arrow_right" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>