<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/body"
    android:orientation="vertical" >

    <include
        android:id="@+id/goodslist_navbar"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        layout="@layout/top_view" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:layout_below="@+id/goodslist_navbar"
        android:layout_marginBottom="55dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="250dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/body_cont_bg"
                android:baselineAligned="false"
                android:gravity="center"
                android:orientation="horizontal" >

                <LinearLayout
                    android:id="@+id/good_cell_one"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/good_cell_name_one"
                        android:layout_width="match_parent"
                        android:layout_height="22dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginLeft="5dp"
                        android:layout_marginBottom="10dp"
                        android:gravity="center_vertical"
                        android:textColor="#000000"
                        android:textSize="15dp"
                        android:textStyle="bold"
                        android:text="封面描述"/>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/good_cell_photo_one"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:src="@drawable/default_image"
                            android:layout_marginRight="10dp"/>

                        <ImageView
                            android:id="@+id/good_cell_photo_two"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:src="@drawable/default_image" />

                    </LinearLayout>


                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/download_layout"
                android:layout_width="fill_parent"
                android:layout_height="90dp"
                android:layout_margin="10dp"
                android:background="@drawable/body_cont"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:visibility="gone">

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="45dp">

                    <TextView
                        android:id="@+id/download_tip"
                        android:layout_width="wrap_content"
                        android:layout_height="22dp"
                        android:layout_marginLeft="20dp"
                        android:textColor="#000000"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:text="下载中"
                        android:layout_alignParentBottom="true"
                        android:layout_marginBottom="2dp"/>

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/upload_progress"
                    android:layout_width="fill_parent"
                    android:layout_height="45dp">

                    <View
                        android:id="@+id/progress_bar"
                        android:layout_width="0dp"
                        android:layout_height="4dp"
                        android:background="#00e000"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="40dp"
                        android:layout_marginTop="8dp"/>

                    <TextView
                        android:id="@+id/progress_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:text="0%"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="10dp"/>

                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/body_cont"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="fill_parent"
                    android:layout_height="50dp" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/declare_title"
                        android:layout_gravity="center_vertical"
                        android:textSize="15sp"
                        android:layout_marginLeft="10dp"/>

                    <TextView
                        android:id="@+id/show_title"
                        android:layout_width="fill_parent"
                        android:layout_height="48dp"
                        android:gravity="center_vertical"
                        android:layout_marginLeft="55dp"
                        android:layout_marginRight="10dp"
                        android:background="#ffffff"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:singleLine="true"
                        android:textColor="#000000"
                        android:maxLength="20"
                        android:textSize="16dp"/>
                </FrameLayout>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="0.1dp"
                    android:background="#c4c4c4" />

                <FrameLayout
                    android:layout_width="fill_parent"
                    android:layout_height="50dp" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/declare_category"
                        android:layout_gravity="center_vertical"
                        android:textSize="15sp"
                        android:layout_marginLeft="10dp"/>

                    <TextView
                        android:id="@+id/show_category"
                        android:layout_width="fill_parent"
                        android:layout_height="48dp"
                        android:gravity="center_vertical"
                        android:layout_marginLeft="55dp"
                        android:layout_marginRight="10dp"
                        android:background="#ffffff"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:singleLine="true"
                        android:textColor="#000000"
                        android:maxLength="20"
                        android:textSize="16dp"/>

                </FrameLayout>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="0.1dp"
                    android:background="#c4c4c4" />

                <FrameLayout
                    android:layout_width="fill_parent"
                    android:layout_height="50dp" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/declare_price"
                        android:layout_gravity="center_vertical"
                        android:textSize="15sp"
                        android:layout_marginLeft="10dp"/>

                    <TextView
                        android:id="@+id/show_price"
                        android:layout_width="fill_parent"
                        android:layout_height="48dp"
                        android:gravity="center_vertical"
                        android:layout_marginLeft="55dp"
                        android:layout_marginRight="10dp"
                        android:background="#ffffff"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:singleLine="true"
                        android:textColor="#000000"
                        android:maxLength="20"
                        android:textSize="16dp"/>

                </FrameLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_gravity="bottom"
        android:background="@drawable/foot_bg"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">

        <ImageView
            android:id="@+id/collection_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="0.2"
            android:src="@drawable/item_info_collection_disabled_btn" />

        <TextView
            android:id="@+id/download_now"
            android:layout_width="83dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginRight="5dp"
            android:layout_weight="0.3"
            android:background="@drawable/button_orange"
            android:gravity="center"
            android:text="@string/gooddetail_buy"
            android:textColor="#ffffff"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/add_to_cart"
            android:layout_width="83dp"
            android:layout_height="40dp"
            android:layout_marginLeft="5dp"
            android:layout_weight="0.3"
            android:background="@drawable/button_red"
            android:gravity="center"
            android:text="@string/gooddetail_collect"
            android:textColor="#ffffff"
            android:textSize="16dp"
            android:layout_marginRight="20dp"/>

    </LinearLayout>

</RelativeLayout>